# dovreot-ai-projects

./: .gitignore
01/: agent_service.py  app.py  main.py  tasks_db.json  test_me.py  todo_service.py  tools_module.py  קישור לריפו.txt
02/: קישור לריפו.txt
02/agent01/: README.md  main.py  pyproject.toml
02/agent01/prompts/: one.md  three.md  tmp.md
03/RAG_projcet/: .gitignore  README.md  data_extractor.py  main.py  rag_engine.py  requirements.txt  workflow_graph.html
03/RAG_projcet/data/: extracted_data.json
03/RAG_projcet/src/core/: schema.py  settings.py
03/RAG_projcet/src/engine/: extractor.py  index_manager.py  workflow.py
03/RAG_projcet/src/ui/: interface.py
03/agentic_project_mock/: main.py
03/agentic_project_mock/.claude/: plan.md
03/agentic_project_mock/.cursor/: instructions.md  schema.md
03/agentic_project_mock/docs/: system_spec.md
