[project]
name = "agent01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.2.25",
    "dotenv>=0.9.9",
    "google-genai>=1.65.0",
    "gradio>=6.8.0",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
]
